<resources>
    <string name="app_name">Sunshine</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="Mati">Mati la chupa</string>
    <string name="Titulo">Login</string>
    <string name="nombre">Nombre de usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="repetir">Repita la contraseña</string>
    <string name="enviar">Enviar</string>
</resources>
